--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="signup_file_upload">파일을 업로드 하세요.</string>
     <string name="signup_camera">바로 올리기</string>
     <string name="signup_gallery">갤러리 찾기</string>
+
+    <string name="home_search">원하는 여행지를 검색해보세요</string>
 </resources>
