--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="signup_camera">바로 올리기</string>
     <string name="signup_gallery">갤러리 찾기</string>
 
-    <string name="home_search">원하는 여행지를 검색해보세요</string>
+    <string name="home_search">동행을 원하는 여행지를 검색해보세요</string>
+    <string name="search_result">검색 결과 총 n건</string>
+    <string name="search_description">현재 동행 여행자 모집 중인 코스입니다.</string>
 </resources>
